tests/rosetta/out/Php/24-game.error
run: exit status 255

Warning: Undefined variable $now in /tmp/24-game.php on line 3

Fatal error: Uncaught Error: Value of type null is not callable in /tmp/24-game.php:3
Stack trace:
#0 /tmp/24-game.php(8): randDigit()
#1 /tmp/24-game.php(70): main()
#2 {main}
  thrown in /tmp/24-game.php on line 3
